tests/models/enum/unit/fail/ge.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/ge.rs:5:5
  |
5 |     Value
  |     ^^^^^
